syntax = "proto3";
package io.apicurio.registry.common.proto;

option java_package = "io.apicurio.registry.common.proto";
option java_outer_classname = "Cmmn";

message UUID {
  fixed64 msb = 1;
  fixed64 lsb = 2;
}
